1.7/_sources/api/sklearn.utils.rst.txt
:html_theme.sidebar_secondary.remove:


.. _utils_ref:


sklearn.utils
=============

.. automodule:: sklearn.utils


**Developer guide.** See the :ref:`developers-utils` section for further details.









.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  Bunch
  _safe_indexing
  as_float_array
  assert_all_finite
  deprecated
  estimator_html_repr
  gen_batches
  gen_even_slices
  indexable
  murmurhash3_32
  resample
  safe_mask
  safe_sqr
  shuffle
  Tags
  InputTags
  TargetTags
  ClassifierTags
  RegressorTags
  TransformerTags
  get_tags


.. _utils_ref-input-and-parameter-validation:



Input and parameter validation
------------------------------



.. automodule:: sklearn.utils.validation

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  check_X_y
  check_array
  check_consistent_length
  check_random_state
  check_scalar
  validation.check_is_fitted
  validation.check_memory
  validation.check_symmetric
  validation.column_or_1d
  validation.has_fit_parameter
  validation.validate_data


.. _utils_ref-meta-estimators:



Meta-estimators
---------------



.. automodule:: sklearn.utils.metaestimators

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  metaestimators.available_if


.. _utils_ref-weight-handling-based-on-class-labels:



Weight handling based on class labels
-------------------------------------



.. automodule:: sklearn.utils.class_weight

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  class_weight.compute_class_weight
  class_weight.compute_sample_weight


.. _utils_ref-dealing-with-multiclass-target-in-classifiers:



Dealing with multiclass target in classifiers
---------------------------------------------



.. automodule:: sklearn.utils.multiclass

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  multiclass.is_multilabel
  multiclass.type_of_target
  multiclass.unique_labels


.. _utils_ref-optimal-mathematical-operations:



Optimal mathematical operations
-------------------------------



.. automodule:: sklearn.utils.extmath

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  extmath.density
  extmath.fast_logdet
  extmath.randomized_range_finder
  extmath.randomized_svd
  extmath.safe_sparse_dot
  extmath.weighted_mode


.. _utils_ref-working-with-sparse-matrices-and-arrays:



Working with sparse matrices and arrays
---------------------------------------



.. automodule:: sklearn.utils.sparsefuncs

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  sparsefuncs.incr_mean_variance_axis
  sparsefuncs.inplace_column_scale
  sparsefuncs.inplace_csr_column_scale
  sparsefuncs.inplace_row_scale
  sparsefuncs.inplace_swap_column
  sparsefuncs.inplace_swap_row
  sparsefuncs.mean_variance_axis






.. automodule:: sklearn.utils.sparsefuncs_fast

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  sparsefuncs_fast.inplace_csr_row_normalize_l1
  sparsefuncs_fast.inplace_csr_row_normalize_l2


.. _utils_ref-working-with-graphs:



Working with graphs
-------------------



.. automodule:: sklearn.utils.graph

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  graph.single_source_shortest_path_length


.. _utils_ref-random-sampling:



Random sampling
---------------



.. automodule:: sklearn.utils.random

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  random.sample_without_replacement


.. _utils_ref-auxiliary-functions-that-operate-on-arrays:



Auxiliary functions that operate on arrays
------------------------------------------



.. automodule:: sklearn.utils.arrayfuncs

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  arrayfuncs.min_pos


.. _utils_ref-metadata-routing:



Metadata routing
----------------



.. automodule:: sklearn.utils.metadata_routing

.. currentmodule:: sklearn.utils

**User guide.** See the :ref:`metadata_routing` section for further details.


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  metadata_routing.MetadataRequest
  metadata_routing.MetadataRouter
  metadata_routing.MethodMapping
  metadata_routing.get_routing_for_object
  metadata_routing.process_routing


.. _utils_ref-discovering-scikit-learn-objects:



Discovering scikit-learn objects
--------------------------------



.. automodule:: sklearn.utils.discovery

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  discovery.all_displays
  discovery.all_estimators
  discovery.all_functions


.. _utils_ref-api-compatibility-checkers:



API compatibility checkers
--------------------------



.. automodule:: sklearn.utils.estimator_checks

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  estimator_checks.check_estimator
  estimator_checks.parametrize_with_checks
  estimator_checks.estimator_checks_generator


.. _utils_ref-parallel-computing:



Parallel computing
------------------



.. automodule:: sklearn.utils.parallel

.. currentmodule:: sklearn.utils


.. autosummary::
  :nosignatures:
  :toctree: ../modules/generated/
  :template: base.rst


  parallel.Parallel
  parallel.delayed
